# Mimo

./: .env.example  .gitignore  AGENTS.md  PROJECT_CONTENTS.md  README.md  package-lock.json  package.json  requirements.txt
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
database/: schema.sql
demo/: 60-90s-demo-script.md  stable-single-work-material.json
docs/: KOC_AGENT_OUTPUT_CONTRACT.md  KOC_AGENT_PRODUCT_DESCRIPTION.docx  KOC_AGENT_PRODUCT_DESCRIPTION.md  REVIEWER_QUICKSTART.md
koc_backend/: __init__.py  __main__.py  agent_runner.py  artifacts.py  assets.py  async_jobs.py  catalog.py  checkpoints.py  config.py  database.py  graph_jobs.py  homepage_signals.py  http_api.py  http_utils.py  jobs_state.py  link_metadata.py  llm.py  memory.py  platform_tools.py  profile_intent.py  profile_validation.py  profiles.py  rule_strategy.py  schemas.py  storage.py  strategy_reports.py  strategy_service.py  task_service.py  tool_registry.py  video_context.py  video_understanding.py  work_understanding.py  workspace_service.py
koc_graph/: __init__.py  graph.py  runtime.py  state.py
scripts/: START_MIMO_REVIEW.ps1  init_database.py  run_backend.ps1  run_koc_regressions.py  self_check.py  smoke_single_work.py  start_deskmate.ps1  static_name_check.py  test_koc_dynamic_script.py  test_koc_evidence_contract.py  test_koc_experiment_review_memory.py  test_koc_homepage_evidence_pipeline.py  test_koc_work_fact_ledger.py
(+43 files in other folders)
