[package]
name = "deskmate"
version = "0.1.0"
description = "Desktop mascot AI agent MVP"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "deskmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 关键：启用 tray-icon，否则 tauri::tray 模块不可用。
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
